src/test/deca/syntax/valid/synt/String.deca
// Description:
//    Programme pour tester StringLiteral
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022
{
    "String";
}